more dicom changes

--- a/m4c_imgs/dicom_intro.ipynb
+++ b/m4c_imgs/dicom_intro.ipynb
@@ -5,8 +5,32 @@
    "metadata": {},
    "source": [
     "# Image Standards in Medicine\n",
-    "\n",
-    "In the cell below are four different images of my brain. Based on these four images, what are some of the minimum data you would need to describe these images?"
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from dminteract.modules.m4c import *\n",
+    "from ipywidgets import interact, fixed\n",
+    "import warnings\n",
+    "from skimage.exposure import equalize_hist\n",
+    "warnings.filterwarnings('ignore')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "solution2": "hidden",
+    "solution2_first": true
+   },
+   "outputs": [],
+   "source": [
+    "display(question_banks[\"qbank4\"][\"dd0, qbank4\"])"
    ]
   },
   {
@@ -27,37 +51,6 @@
     "  </tr>\n",
     "</table>\n",
     "</html>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "solution": "hidden",
-    "solution2": "hidden",
-    "solution2_first": true,
-    "solution_first": true
-   },
-   "source": [
-    "### Your ideas\n",
-    "\n",
-    "* ???\n",
-    "* ???"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "solution": "hidden",
-    "solution2": "hidden"
-   },
-   "source": [
-    "### Some of my ideas\n",
-    "\n",
-    "1. You have standard things like image size, number of bytes per pixel that we saw with standard images\n",
-    "1. There are two different modalities here (MRI and CT), so we need to know something about what modalty was used\n",
-    "1. There are three different orientations of the images, so we need to know how the images are oriented (axial, coronal, sagittal, or oblique (other)).\n",
-    "1. The MRI images all have different physical contrasts, so we need to know something about what the iamge parameters were that generated the image.\n",
-    "1. We need to be able to represent both 2D images and 3D images. In fact, 4D images are now common with the fourth dimension being time."
    ]
   },
   {
@@ -299,16 +292,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "from dminteract.modules.m4c import *\n",
-    "from ipywidgets import interact, fixed\n",
-    "import warnings\n",
-    "from skimage.exposure import equalize_hist\n",
-    "warnings.filterwarnings('ignore')"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -321,7 +308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -355,24 +342,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "9f1132830d1a45a88b39fa2c2818da51",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "interactive(children=(Dropdown(description='img', options=(('img1', (0008, 0008) Image Type                   …"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "_= interact(view_dicom_data, img={\"img1\":img1,\n",
     "               \"img2\":img2, \n",
@@ -398,24 +370,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2b238030429f47dea3449895e75af63b",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "interactive(children=(Dropdown(description='item', options={'Image Type': (0008, 0008), 'SOP Class UID': (0008…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "_ = interact(view_dicom_data_rev, \n",
     "             img=fixed(img1), \n",
@@ -424,24 +381,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "549fa297110a4cf1858d1dbfb18f5ca4",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "interactive(children=(Dropdown(description='item', options={'Specific Character Set': (0008, 0005), 'Image Typ…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "_ = interact(view_dicom_data_rev, \n",
     "             img=fixed(img2), \n",
@@ -450,24 +392,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "585da61d0912485b82a5b725958d21e3",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "interactive(children=(Dropdown(description='item', options={'Specific Character Set': (0008, 0005), 'Image Typ…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "_ = interact(view_dicom_data_rev, \n",
     "             img=fixed(img3), \n",
@@ -476,26 +403,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4df7e2f11bf04ec393b2c32b37396c0b",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "interactive(children=(Dropdown(description='item', options={'Image Type': (0008, 0008), 'SOP Class UID': (0008…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "_ = interact(view_dicom_data_rev, \n",
     "             img=fixed(img4), \n",
@@ -511,97 +421,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b933cad1df3948efb80d78ec98e94752",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "VBox(children=(Output(outputs=({'output_type': 'stream', 'text': 'What is the modality of img2?\\n', 'name': 's…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "954a26c1fe514755bf8678811bf564ee",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "VBox(children=(Output(outputs=({'output_type': 'stream', 'text': 'In which image are breast implants present?\\…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "222e4dbff39f41a287d99df08ef671f8",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "VBox(children=(Output(outputs=({'output_type': 'stream', 'text': 'In the four images, what modality is not rep…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "50b5cb4a753242d9b693c5342c2b73d8",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "VBox(children=(Output(outputs=({'output_type': 'stream', 'text': 'Which image was acquired with the largest fo…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "85efecca5530436d997731bf8543fd1e",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "VBox(children=(Output(outputs=({'output_type': 'stream', 'text': 'Which nucleus is imaged in the MR image?\\n',…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ee4c6db626d34e1ba0679b96046a5b81",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "VBox(children=(Output(outputs=({'output_type': 'stream', 'text': 'A lower entrance dose is used on the thicker…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "for q in nb2_questions:\n",
-    "    display(nb2_questions[q])"
+    "for q in question_banks[\"qbank3\"].values():\n",
+    "    display(q)"
    ]
   },
   {
@@ -613,26 +438,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {
-    "solution": "hidden"
-   },
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "677aa9ac936a492eb66a0b74099d0785",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "interactive(children=(Dropdown(description='x', options=(('img1', (0008, 0008) Image Type                     …"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "_=interact(lambda x:imshow(equalize_hist(x.pixel_array), cmap=\"gray\"), \n",
     "           x={\"img1\":img1,\n",
@@ -643,9 +451,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "solution": "hidden"
-   },
+   "metadata": {},
    "source": [
     "### Modality Standards\n",
     "\n",
@@ -654,6 +460,13 @@
     "* [Mammography](http://dicom.nema.org/medical/dicom/current/output/chtml/part03/sect_C.8.31.html).\n",
     "* [CT](http://dicom.nema.org/medical/dicom/current/output/chtml/part03/sect_C.8.2.html)\n",
     "* [MR](http://dicom.nema.org/medical/dicom/current/output/chtml/part03/sect_C.8.3.html)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### [Move onto the next notebook](dicom_intro_pixels_voxels.ipynb)"
    ]
   },
   {
