added pyarrow install cell

--- a/m4b_mimic2/visualize_case_timeline.ipynb
+++ b/m4b_mimic2/visualize_case_timeline.ipynb
@@ -19,6 +19,22 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### First we need to install `pyarrow`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!python -m pip install pyarrow"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
