added mimic exploration without questions

--- a/m4b_mimic2/visualize_case_timeline.ipynb
+++ b/m4b_mimic2/visualize_case_timeline.ipynb
@@ -2,7 +2,10 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": false,
+    "editable": false
+   },
    "source": [
     "# Visualization of MIMIC Case Timelines\n",
     "\n",
@@ -15,14 +18,21 @@
     "* When you use the dropdown menu to select a new case, the refreshing of the chart can be a bit slow.\n",
     "* The charts have pan and zoom capability.\n",
     "* You can see more details by hovering the cursor over a point.\n",
-    "* The color of the circles encodes which provider (e.g. nurse, therapist) entered the data. You can clearly see shifts in the care staff over time."
+    "* The color of the circles encodes which provider (e.g. nurse, therapist) entered the data. You can clearly see shifts in the care staff over time.\n",
+    "\n",
+    "#### This notebook will only work in Jupyterlab"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": false,
+    "editable": false
+   },
    "source": [
-    "### First we need to install `pyarrow`"
+    "### First we need to install `pyarrow`\n",
+    "\n",
+    "After you have run this once, you can comment out the command in the cell below"
    ]
   },
   {
@@ -37,42 +47,58 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "deletable": false,
+    "editable": false
+   },
    "outputs": [],
    "source": [
-    "from mvutils import *\n",
+    "from m4butils.mvutils import *\n",
     "from ipywidgets import interact"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "deletable": false,
+    "editable": false
+   },
    "outputs": [],
    "source": [
-    "case_data = read_data()\n"
+    "case_data = read_data()\n",
+    "case_list = list(case_data.keys())\n",
+    "case_list.sort()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "deletable": false,
+    "editable": false
+   },
    "outputs": [],
    "source": [
-    "@interact(case=case_data.keys())\n",
+    "@interact(case=case_list)\n",
     "def _plot_case(case):\n",
     "    plt = plot_case(case_data[case])\n",
     "    return plt"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Go to the [next notebook](explore_mimic_data.ipynb)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "%debug"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
