--- a/m4b_mimic2/what_does_mimic_look_like.ipynb
+++ b/m4b_mimic2/what_does_mimic_look_like.ipynb
@@ -14,19 +14,22 @@
    "outputs": [],
    "source": [
     "### you may need to install jinja2. To do so,\n",
-    "# uncomment the line below and run this cell\n",
-    "#!pip install jinja2\n"
+    "# run this cell\n",
+    "!pip install jinja2\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "deletable": false,
+    "editable": false
+   },
    "outputs": [],
    "source": [
     "import warnings\n",
     "warnings.simplefilter(\"ignore\")\n",
-    "from mutils import *"
+    "from m4butils.mutils import *"
    ]
   },
   {
@@ -50,7 +53,10 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "deletable": false,
+    "editable": false
+   },
    "outputs": [],
    "source": [
     "conn = get_mimic_connection()"
@@ -58,7 +64,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": false,
+    "editable": false
+   },
    "source": [
     "## Let's take a look at the tables\n",
     "\n",
@@ -73,18 +82,24 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "deletable": false,
+    "editable": false
+   },
    "outputs": [],
    "source": [
     "tables = get_tables(conn)\n",
-    "HTML(dlist(tables[\"Tables_in_mimic2\"].to_list()))"
+    "HTML(dlist(tables[\"Tables_in_mimic2\"].to_list(), ncols=5, sort=True))"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": false,
+    "editable": false
+   },
    "source": [
-    "## By my reckoning we have three types of tables\n",
+    "## By my reckoning, we have three types of tables\n",
     "\n",
     "* Database-internal table(s) (db_schema)\n",
     "* Tables that start with `a_`\n",
@@ -94,34 +109,36 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": false,
+    "editable": false
+   },
    "source": [
     "## What are in the tables?\n",
-    "### We can use the MySQL command `DESCRIBE` to see th definitions in the table"
+    "### We can use the MySQL command `DESCRIBE` to see the definitions in each table"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "deletable": false,
+    "editable": false
+   },
    "outputs": [],
    "source": [
-    "table_names = [row[\"Tables_in_mimic2\"] for _,row in tables.iterrows()]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "table_names = [row[\"Tables_in_mimic2\"] for _,row in tables.iterrows()]\n",
+    "\n",
     "table_descriptions = get_table_descriptons(conn)\n",
     "\n"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": false,
+    "editable": false
+   },
    "source": [
     "### Take a look at `d_patients`\n",
     "\n",
@@ -131,7 +148,10 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "deletable": false,
+    "editable": false
+   },
    "outputs": [],
    "source": [
     "display(table_descriptions[\"d_patients\"])\n",
@@ -141,7 +161,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": false,
+    "editable": false
+   },
    "source": [
     "### Examine `medevents`\n",
     "\n",
@@ -156,7 +179,10 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "deletable": false,
+    "editable": false
+   },
    "outputs": [],
    "source": [
     "display(table_descriptions[\"medevents\"])\n",
@@ -165,7 +191,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": false,
+    "editable": false
+   },
    "source": [
     "Similar to the `d_patients` table, there are values like dose that are provided explicity (e.g. 1350) and the unit of measurement for dose (`doseuom=Uhr` (unit per hour), but there are also a large number of values (recognized by the `id` component in the name) that are references to values defined in other tables. These ids are called **foreign keys.** Some of these include:\n",
     "\n",
@@ -184,7 +213,10 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "deletable": false,
+    "editable": false
+   },
    "outputs": [],
    "source": [
     "devents = pd.read_sql(\n",
@@ -213,7 +245,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": false,
+    "editable": false
+   },
    "source": [
     "### With a little bit of manipulation we can get the age\n",
     "\n",
@@ -225,11 +260,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "deletable": false,
+    "editable": false
+   },
    "outputs": [],
    "source": [
-    "devents[\"age\"] = devents.apply(lambda r: (r.charttime - r.dob).days/365.2425, axis=1)\n",
-    "devents2 = devents[[\"subject_id\", \"sex\", \"age\", \"charttime\", \"medname\", \n",
+    "devents[\"age in years\"] = devents.apply(lambda r: (r.charttime - r.dob).days/365.2425, axis=1)\n",
+    "devents2 = devents[[\"subject_id\", \"sex\", \"age in years\", \"charttime\", \"medname\", \n",
     "                   \"dose\", \"doseuom\", \"route\", \"cgid\", \"cglabel\", \"cuname\"]]\n",
     "devents2"
    ]
@@ -244,7 +282,10 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "deletable": false,
+    "editable": false
+   },
    "outputs": [],
    "source": [
     "tcs = get_table_columns(table_descriptions)\n",
@@ -253,35 +294,48 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": false,
+    "editable": false
+   },
    "source": [
-    "#### Here is a simple interactive graph view of foreign keys and what they (might) refer to"
+    "#### Here is a simple interactive view of foreign keys and what they (might) refer to\n",
+    "\n",
+    "The displayed table shows for a selected column (`col`) from `tbl` all the other MIMIC2 tables that have that same column name."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "deletable": false,
+    "editable": false
+   },
    "outputs": [],
    "source": [
     "\n",
     "    \n",
     "table_names = widgets.Dropdown(options = tcs.keys())\n",
     "col_names = widgets.Dropdown(options = tcs[table_names.value])\n",
-    "\n",
+    "lbl = widgets.HTML(value=\"Tables where is also found.\")\n",
     "def update_col_choices(change):\n",
     "    col_names.options = tcs[change.new]\n",
     "    \n",
     "table_names.observe(update_col_choices, names=\"value\")\n",
-    "\n",
-    "i1 = interact(view_db_graph, tbls=fixed(tcs), tbl = table_names, col=col_names)\n",
-    "\n",
-    "HTML(markdown(\"#### You can resize the graph by clicking on it.\"))"
+    "def get_db_links(tbls, tbl, col):\n",
+    "    lbl.value = markdown(\"## Tables where `%s` is also found\"%col)\n",
+    "    tables = [t for t in tbls if col in tbls[t] and t != tbl]\n",
+    "    return HTML(dlist(tables, ncols=8, sort=True))\n",
+    "display(lbl)\n",
+    "i1 = interact(get_db_links, tbls=fixed(tcs), tbl = table_names, col=col_names)"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": false,
+    "editable": false
+   },
    "source": [
     "### Some general comments\n",
     "\n",
@@ -292,17 +346,13 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": false,
+    "editable": false
+   },
    "source": [
     "### [Go on to the next notebook](visualize_case_timeline.ipynb)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
