--- a/m4b_mimic2/explore_mimic_data.ipynb
+++ b/m4b_mimic2/explore_mimic_data.ipynb
@@ -14,14 +14,26 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "deletable": false
+   },
+   "outputs": [],
+   "source": [
+    "!python -m pip install -U git+https://github.com/chapmanbe/dminteract#egg=dminteract"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
     "deletable": false,
     "editable": false
    },
    "outputs": [],
    "source": [
-    "from m4butils.emutils import *\n",
-    "from m4butils.description import *\n",
-    "warnings.filterwarnings('ignore')"
+    "from m5utils.emutils import *\n",
+    "from m5utils.description import *\n",
+    "warnings.filterwarnings('ignore')\n",
+    "from dminteract.modules.m5 import *"
    ]
   },
   {
@@ -83,6 +95,26 @@
    "outputs": [],
    "source": [
     "explore_mimic"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Questions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "deletable": false,
+    "editable": false
+   },
+   "outputs": [],
+   "source": [
+    "for q in question_banks[\"qbank3\"].values():\n",
+    "    display(q)"
    ]
   },
   {
