--- a/m4b_mimic2/visualize_case_timeline.ipynb
+++ b/m4b_mimic2/visualize_case_timeline.ipynb
@@ -41,7 +41,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!python -m pip install pyarrow"
+    "!python -m pip install pyarrow\n",
+    "!python -m pip install -U git+https://github.com/chapmanbe/dminteract#egg=dminteract"
    ]
   },
   {
@@ -53,8 +54,9 @@
    },
    "outputs": [],
    "source": [
-    "from m4butils.mvutils import *\n",
-    "from ipywidgets import interact"
+    "from m5utils.mvutils import *\n",
+    "from ipywidgets import interact\n",
+    "from dminteract.modules.m5 import *"
    ]
   },
   {
@@ -90,15 +92,28 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Go to the [next notebook](explore_mimic_data.ipynb)"
+    "### Questions"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "deletable": false,
+    "editable": false
+   },
    "outputs": [],
-   "source": []
+   "source": [
+    "for q in question_banks[\"qbank2\"].values():\n",
+    "    display(q)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Go to the [next notebook](explore_mimic_data.ipynb)"
+   ]
   },
   {
    "cell_type": "code",
