--- a/m4b_mimic2/what_does_mimic_look_like.ipynb
+++ b/m4b_mimic2/what_does_mimic_look_like.ipynb
@@ -4,7 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# A Quick Look at the MIMIC II Data Set"
+    "# A Quick Look at the MIMIC II Data Set\n",
+    "\n",
+    "### First install some dependenies"
    ]
   },
   {
@@ -15,21 +17,22 @@
    "source": [
     "### you may need to install jinja2. To do so,\n",
     "# run this cell\n",
-    "!pip install jinja2\n"
+    "!python -m pip install jinja2\n",
+    "!python -m pip install -U git+https://github.com/chapmanbe/dminteract#egg=dminteract"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "deletable": false,
-    "editable": false
+    "deletable": false
    },
    "outputs": [],
    "source": [
     "import warnings\n",
     "warnings.simplefilter(\"ignore\")\n",
-    "from m4butils.mutils import *"
+    "from m5utils.mutils import *\n",
+    "from dminteract.modules.m5 import *\n"
    ]
   },
   {
@@ -47,7 +50,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### First we need to generate a connection to the MIMIC"
+    "### First we need to generate a connection to the MIMIC database\n",
+    "\n",
+    "As you work through this notebook, you might occasionally get an error that looks something like this (although much longer):\n",
+    "\n",
+    "```Python\n",
+    "---------------------------------------------------------------------------\n",
+    "BrokenPipeError                           Traceback (most recent call last)\n",
+    "...\n",
+    "(2006, \"MySQL server has gone away (BrokenPipeError(32, 'Broken pipe'))\")\n",
+    "\n",
+    "```\n",
+    "\n",
+    "This just means that the connection with the database has timed out. All you need to do is come back up here and rerun the code below to get a new database connection."
    ]
   },
   {
@@ -202,6 +217,8 @@
     "* `cgid` that is defined `d_caregivers`\n",
     "* `itemid` that is defined in `d_meditems`\n",
     "\n",
+    "Another important idea is represented in the column named `Null`. If the value is `YES`, that means the value is allowed to be missing. A value of `NO` means that a value must be provided. The issue of missing data will be very important for many applications.\n",
+    "\n",
     "To fully understand an entry, we need to join the values that are provided in a `medevent` entry with the values defined in the other tables referred to with the `id` values (foreign keys).\n",
     "\n",
     "### Here is an example\n",
@@ -346,6 +363,26 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Questions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "deletable": false,
+    "editable": false
+   },
+   "outputs": [],
+   "source": [
+    "for q in question_banks[\"qbank1\"].values():\n",
+    "    display(q)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
     "deletable": false,
     "editable": false
@@ -353,6 +390,13 @@
    "source": [
     "### [Go on to the next notebook](visualize_case_timeline.ipynb)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
