updated dminteract install

--- a/m4c_imgs/basic_image_standards.ipynb
+++ b/m4c_imgs/basic_image_standards.ipynb
@@ -20,6 +20,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "!python -m pip install -U git+https://github.com/chapmanbe/dminteract#egg=dminteract"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "from dminteract.modules.m4c import *\n",
     "import warnings\n",
     "warnings.filterwarnings('ignore')"
