--- a/m4c_imgs/dicom_intro_pixels_voxels.ipynb
+++ b/m4c_imgs/dicom_intro_pixels_voxels.ipynb
@@ -114,6 +114,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# uncomment if you need to install dminteract\n",
+    "#!python -m pip install -U git+https://github.com/chapmanbe/dminteract#egg=dminteract"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "from IPython.display import YouTubeVideo\n",
     "YouTubeVideo(\"KZld-5W99cI\")"
    ]
@@ -188,6 +198,13 @@
    "source": [
     "display(b)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
