--- a/m4c_imgs/dicom_intro.ipynb
+++ b/m4c_imgs/dicom_intro.ipynb
@@ -14,6 +14,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# uncomment if you need to install dminteract\n",
+    "#!python -m pip install -U git+https://github.com/chapmanbe/dminteract#egg=dminteract"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "from dminteract.modules.m4c import *\n",
     "from ipywidgets import interact, fixed\n",
     "import warnings\n",
