commit before trying to resolve jscript issues with model not being found

--- a/m5_mimic2/explore_mimic_data.ipynb
+++ b/m5_mimic2/explore_mimic_data.ipynb
@@ -25,13 +25,13 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "deletable": false,
-    "editable": false
+    "deletable": false
    },
    "outputs": [],
    "source": [
-    "from m5utils.emutils import *\n",
-    "from m5utils.description import *\n",
+    "from m5utils.emutils import init_view, descriptions, explore_mimic\n",
+    "from m5utils.emutils import _debug\n",
+    "import warnings\n",
     "warnings.filterwarnings('ignore')\n",
     "from dminteract.modules.m5 import *"
    ]
