--- a/m5_mimic2/multisubject_exploration.ipynb
+++ b/m5_mimic2/multisubject_exploration.ipynb
@@ -15,8 +15,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from m5utils.aeutils import *\n",
-    "from m5utils.aeutils import _debug\n",
+    "from m5utils.aeutils import aexplore_mimic, make_description, init_view\n",
+    "import ipywidgets as ipw\n",
+    "import warnings\n",
     "warnings.filterwarnings('ignore')"
    ]
   },
@@ -26,7 +27,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "display(ipw.VBox([debug_out, _debug]))\n",
     "init_view()"
    ]
   },
@@ -36,7 +36,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "descriptions"
+    "make_description()"
    ]
   },
   {
