cleaned up utilities some and added ROADMAP.ipynb

--- a/m5_mimic2/explore_mimic_data.ipynb
+++ b/m5_mimic2/explore_mimic_data.ipynb
@@ -18,6 +18,10 @@
    },
    "outputs": [],
    "source": [
+    "### you may need to install jinja2. To do so,\n",
+    "# run this cell\n",
+    "!python -m pip install jinja2\n",
+    "!python -m pip install pyarrow\n",
     "!python -m pip install -U git+https://github.com/chapmanbe/dminteract#egg=dminteract"
    ]
   },
@@ -29,8 +33,7 @@
    },
    "outputs": [],
    "source": [
-    "from m5utils.emutils import init_view, descriptions, explore_mimic\n",
-    "from m5utils.emutils import _debug\n",
+    "import m5utils.emutils as em\n",
     "import warnings\n",
     "warnings.filterwarnings('ignore')\n",
     "from dminteract.modules.m5 import *"
@@ -40,19 +43,17 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "deletable": false,
-    "editable": false
+    "deletable": false
    },
    "outputs": [],
    "source": [
-    "init_view()\n"
+    "em.init_view()\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {
-    "deletable": false,
-    "editable": false
+    "deletable": false
    },
    "source": [
     "## Instructions\n",
@@ -60,6 +61,8 @@
     "This notebook displays and plots data from selected MIMIC tables for a small set of patients contained in the MIMIC2 demo data set. You can read descriptions of the available table by browsing through the tabs below. The data are displayed in two forms. First, we show you a subsection of the table contained in a [Pandas](https://pandas.pydata.org/) [DataFrame](https://pandas.pydata.org/docs/getting_started/dsintro.html#dataframe). We show up to 5 rows. You can move the slider above the DataFrame to move through the DataFrame.\n",
     "\n",
     "Second, we show you a histogram and a time series plot of the selected plot variable. For categorical variables, we count the number of occurrences for each value. For numeric variables we plot the histogram. The x-axis of the time series is always the `event_time` variable. Plots are created with [altair](https://altair-viz.github.io/), which currently only works in Jupyterlab, and not the traditional notebook view. All the jupyter servers provide both the traditional and lab views, which are selected in the web address. The traditional view is accessed via the `tree` address (e.g. `http://localhost:8996/tree`), while Jupyterlab is accessed iv the `lab` address (e.g. `http://localhost:8996/lab).\n",
+    "\n",
+    "#### Remember to shutdown the other notebooks for this module before proceeding.\n",
     "\n",
     "### Steps to Follow\n",
     "\n",
@@ -77,24 +80,22 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "deletable": false,
-    "editable": false
+    "deletable": false
    },
    "outputs": [],
    "source": [
-    "descriptions"
+    "em.description()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "deletable": false,
-    "editable": false
+    "deletable": false
    },
    "outputs": [],
    "source": [
-    "explore_mimic"
+    "display(em.get_case_explorer())"
    ]
   },
   {
