--- a/m5_mimic2/multisubject_exploration.ipynb
+++ b/m5_mimic2/multisubject_exploration.ipynb
@@ -6,7 +6,23 @@
    "source": [
     "# Comparing Data Across Subjects\n",
     "\n",
-    "This notebook is a small tweak from `explore_mimic_data.ipynb` in that it allows you to select multiple subjects and compare data values across the subjects. Because every patient has a random time shift, it is not straightforward to compare time series (although I'm working on it!). Instead we will look at distributions and counts of the events and values."
+    "This notebook is a small tweak from `explore_mimic_data.ipynb` in that it allows you to select multiple subjects and compare data values across the subjects. Because every patient has a random time shift, it is not straightforward to compare time series (although I'm working on it!). Instead we will look at distributions and counts of the events and values.\n",
+    "\n",
+    "## Questions to Explore\n",
+    "\n",
+    "### `DRG` values\n",
+    "In the far right of the tabs below there is a tab labeled `DRG`. This shows the Diagnosis-related group (`DRG`) codes for each patient. A `DRG` code of 1.0, means this patient's combined medical conditions would be expected to lead to hospitalization costs of an average US patient. `DRG` values greater than 1.0, mean the patient would be expected to have hospitalization costs greater than average (proportional to the `DRG` value) and `DRG` values less than 1.0 should similarly be less expensive. In this data set `DRG` values range from from 0.72  to 19.80. By comparing subjects with a range of `DRG` values, can you come up with explanations for the cost differences? Radiology procedures can incur high costs as can drugs.\n",
+    "\n",
+    "### Infections\n",
+    "\n",
+    "Tests for infectious agents are shown in the `microbiology_events` table. Tests with missing values are test that did not identify any known pathogens. What are the most common pathogens `organism_name` across patients? Do higher `DRG` subjects have different pathogens? What are the frequently used antibiotics? Do the antibiotics show up on this chart of antibiotics and their costs?\n",
+    "\n",
+    "![antibiotic costs vs date of introduction](https://cddep.org/wp-content/uploads/2017/06/etcfig1-8.png)\n",
+    "\n",
+    "The `interpretation` values of `S` sensitive and `R` resistant indicate whether an organism was sensitive or resistant to an antibiotic. Can you spot any patterns of resistant antibiotics in the subjects?\n",
+    "\n",
+    "\n",
+    "#### Remember to shutdown the other notebooks for this module before proceeding."
    ]
   },
   {
@@ -15,7 +31,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from m5utils.aeutils import aexplore_mimic, make_description, init_view\n",
+    "### you may need to install jinja2. To do so,\n",
+    "# run this cell\n",
+    "!python -m pip install jinja2\n",
+    "!python -m pip install pyarrow\n",
+    "!python -m pip install -U git+https://github.com/chapmanbe/dminteract#egg=dminteract"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import m5utils.aeutils as ae\n",
+    "import ipywidgets as ipw\n",
     "import ipywidgets as ipw\n",
     "import warnings\n",
     "warnings.filterwarnings('ignore')"
@@ -27,7 +57,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "init_view()"
+    "ae.init_view()"
    ]
   },
   {
@@ -36,7 +66,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "make_description()"
+    "ae.make_description()"
    ]
   },
   {
@@ -45,7 +75,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "aexplore_mimic"
+    "display(ae.get_explorer())"
    ]
   },
   {
