--- a/m5_mimic2/visualize_case_timeline.ipynb
+++ b/m5_mimic2/visualize_case_timeline.ipynb
@@ -41,6 +41,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "### you may need to install jinja2. To do so,\n",
+    "# run this cell\n",
+    "!python -m pip install jinja2\n",
     "!python -m pip install pyarrow\n",
     "!python -m pip install -U git+https://github.com/chapmanbe/dminteract#egg=dminteract"
    ]
