--- a/m5_mimic2/what_does_mimic_look_like.ipynb
+++ b/m5_mimic2/what_does_mimic_look_like.ipynb
@@ -6,7 +6,9 @@
    "source": [
     "# A Quick Look at the MIMIC II Data Set\n",
     "\n",
-    "### First install some dependenies"
+    "### First install some dependencies\n",
+    "\n",
+    "These dependencies are for all the notebooks, so you don't need to run them in the others, although I've included this cell in each one."
    ]
   },
   {
@@ -18,6 +20,7 @@
     "### you may need to install jinja2. To do so,\n",
     "# run this cell\n",
     "!python -m pip install jinja2\n",
+    "!python -m pip install pyarrow\n",
     "!python -m pip install -U git+https://github.com/chapmanbe/dminteract#egg=dminteract"
    ]
   },
@@ -389,6 +392,18 @@
    },
    "source": [
     "### [Go on to the next notebook](visualize_case_timeline.ipynb)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for t in table_names:\n",
+    "    print(t)\n",
+    "    display(view_table(t, 20, conn))\n",
+    "    print(\"-\"*40)"
    ]
   },
   {
